# easygo_tracker_bot

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: ai.py  config.py  database.py  decorators.py  handlers.py  main.py  medals.py  models.py  parser.py  sheets.py
bot/utils/: __init__.py  logger.py  version.py
tests/: test_parser.py
utils/: trigger_medal_report.py
